--- a/templates/base.html
+++ b/templates/base.html
@@ -41,7 +41,7 @@
             </div>
 
             <div class="flex items-center space-x-3">
-                <button class="relative p-2 rounded-full hover:bg-white/20">
+                <button  onclick="window.location.href='{% url 'advisory_page' %}'" class="relative p-2 rounded-full hover:bg-white/20">
                     <i data-lucide="bell" class="w-6 h-6 icon-green"></i>
                     <span class="absolute -top-1 -right-1 w-3 h-3 bg-red-500 rounded-full"></span>
                 </button>
@@ -71,9 +71,9 @@
                 <i data-lucide="brain" class="w-6 h-6 icon-green"></i>
                 <span class="text-xs font-medium">AI Assistant</span>
             </a>
-            <a href="#" class="nav-item flex flex-col items-center p-2">
-                <i data-lucide="calendar" class="w-6 h-6 icon-green"></i>
-                <span class="text-xs font-medium">Schedule</span>
+            <a href="{% url 'gov_schemes' %}" class="nav-item flex flex-col items-center p-2">
+                <i data-lucide="landmark" class="w-6 h-6 icon-green"></i>
+                <span class="text-xs font-medium">Gov Scheme</span>
             </a>
             <a href="{% url 'prices_page' %}" class="nav-item flex flex-col items-center p-2">
                 <i data-lucide="indian-rupee" class="w-6 h-6 icon-green"></i>
