--- a/templates/base.html
+++ b/templates/base.html
@@ -67,7 +67,7 @@
                 <i data-lucide="home" class="w-6 h-6 icon-green"></i>
                 <span class="text-xs font-medium">Home</span>
             </a>
-            <a href="{% url 'ai_page' %}" class="nav-item flex flex-col items-center p-2">
+            <a href="{% url 'ai:ai_page' %}" class="nav-item flex flex-col items-center p-2">
                 <i data-lucide="brain" class="w-6 h-6 icon-green"></i>
                 <span class="text-xs font-medium">AI Assistant</span>
             </a>
